Removed left & right padding from posts to ensure wider on mobile devices; replaced with 40px top padding between previous post.

--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -109,7 +109,7 @@ h2 > a {
 }
 
 .hero-unit {
-    padding: 30px;
+    padding-top: 40px;
 }
 
 .hero-unit p {
